# kube-hunter

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README-es.md  README-pt-BR.md  README.md  SECURITY.md  conf.py  discovery.py  events.py  install_imports.py  job.yaml  kube-hunter.py  kube_open_dashboard.py  log.py  main.py  pyproject.toml  requests.txt  requirements-dev.txt  requirements.txt  requirements2.txt  runtest.py  services.py  setup.cfg  setup.py  sitemap.xml  validation.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  greetings.yml  lint.yml  publish-ecr.yml  publish.yml  release.yml  test.yml
discovery/: __init__.py  dashboard.py  hosts.py  kubelet.py  ports.py  proxy.py
docs/: Gemfile  _config.yml  index.md  kbindex.html  search-script.js  search.json  search.md
docs/_kb/: KHV002.md  KHV003.md  KHV004.md  KHV005.md  KHV006.md  KHV007.md  KHV020.md  KHV021.md  KHV022.md  KHV023.md  KHV024.md  KHV025.md  KHV026.md  KHV027.md  KHV028.md  KHV029.md  KHV030.md  KHV031.md  KHV032.md  KHV033.md  KHV034.md  KHV036.md  KHV037.md  KHV038.md  KHV039.md  KHV040.md  KHV041.md  KHV042.md  KHV043.md  KHV044.md  KHV045.md  KHV046.md  KHV047.md  KHV049.md  KHV050.md  KHV051.md  KHV052.md  KHV053.md
docs/_layouts/: default.html
docs/kb/: KHV001.md  KHV002.md  KHV003.md  KHV004.md  KHV005.md  KHV006.md  KHV007.md  KHV009.md  KHV011.md  KHV020.md  KHV021.md  KHV022.md  KHV023.md  KHV024.md  KHV025.md  KHV026.md  KHV027.md  KHV028.md  KHV029.md  KHV030.md  KHV031.md  KHV032.md  KHV033.md  KHV034.md  KHV036.md  KHV037.md  KHV038.md  KHV039.md  KHV040.md  KHV041.md  KHV042.md  KHV043.md  KHV044.md  KHV045.md  KHV046.md  KHV047.md  KHV049.md  KHV050.md  KHV051.md  KHV052.md
events/: __init__.py  default_types.py  handler.py
hunters/: __init__.py  dashboard.py  hunter.py  kubelet.py  proxy.py
hunting/: __init__.py  dashboard.py  kubelet.py  proxy.py
kube_hunter/: README.md  __init__.py  __main__.py
kube_hunter/conf/: __init__.py  k8s.py  logging.py  parser.py
kube_hunter/console/: __init__.py  discover.py  env.py  manager.py  models.py  show.py
kube_hunter/core/: __init__.py  events.py  types.py
kube_hunter/modules/: __init__.py
kube_hunter/plugins/: __init__.py  (+1 more)
log/: __init__.py  config.py  reporter.py
modules/: __init__.py  host_discovery.py  kube_open_dashboard.py  port_discovery.py
plugins/: README.md  __init__.py  logging_mod.py
pyinstaller_hooks/: hook-prettytable.py
report/: __init__.py  aqua.py  default.py  reporter.py
src/: README.md  __init__.py
tests/: test_aks.py
yaml/: job-as-admin.yaml
(+162 files in other folders)
