[metadata]
name = kube-hunter
description = Kubernetes security weaknesses hunter for humans
long_description = file: README.md
long_description_content_type = text/markdown
author = Aqua Security
author_email = support@aquasec.com
url = https://github.com/aquasecurity/kube-hunter
keywords =
    aquasec
    hunter
    kubernetes
    k8s
    security
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Security

[options]
zip_safe = False
packages = find:
install_requires =
    netaddr
    pyroute2
    requests
    PrettyTable
    urllib3>=1.24.3
    ruamel.yaml
    future
    packaging
    dataclasses
    pluggy
    kubernetes==12.0.1
setup_requires =
    setuptools>=30.3.0
    setuptools_scm
test_requires =
    pytest>=2.9.1
    coverage<5.0
    pytest-cov
    requests-mock
python_requires = >=3.6

[options.entry_points]
console_scripts =
    kube-hunter = kube_hunter.__main__:main

[aliases]
test=pytest

# PyTest
[tool:pytest]
minversion                                        = 2.9.1
norecursedirs                                     = .venv .vscode
addopts                                           = --cov=kube_hunter
testpaths                                         = tests
console_output_style                              = progress
python_classes                                    = Test*
python_files                                      = test_*.py
python_functions                                  = test_*
filterwarnings                                    = ignore::DeprecationWarning

# Coverage
[coverage:report]
# show missing lines numbers
show_missing = True
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive
    # assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    # Don't complain about log messages not being tested
    logger\.
    logging\.

# Files to exclude from consideration
omit =
    kube_hunter/__main__.py
